ubuntu-themes (13.04+13.10.20130716-0ubuntu2) UNRELEASED; urgency=low

  [ James Schriver ]
  * Fix regression, bring back dark toolbars in Gtk+3 apps. (LP: #1118838)

  [ Alberts Muktupavels ]
  * Restore padding between texts 'Applications' and 'Places' in
    gnome-panel, currently there is no space running
    gnome-session-fashback. (LP: #1154814)
  
  [ Nick Dedekind ]
  * Add missing battery icon links to ubuntu-mobile theme, needed for
    indicator-power.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Thu, 01 Aug 2013 22:20:45 +0100

ubuntu-themes (13.04+13.10.20130716-0ubuntu1) saucy; urgency=low

  * Automatic snapshot from revision 297

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Tue, 16 Jul 2013 00:02:01 +0000

ubuntu-themes (13.04+13.10.20130712-0ubuntu1) saucy; urgency=low

  [ Dmitrijs Ledkovs ]
  * Gtk+ 3 got fixed, and now actually started to honour link color, which
    was defined as light blue. But orange links have grown on us
    already. Thus defining link colour to be orange. (LP: #1187327)

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 295

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 12 Jul 2013 00:02:31 +0000

ubuntu-themes (13.04daily13.06.13-0ubuntu2) UNRELEASED; urgency=low

  * Add indicator-keyboard icons.

 -- William Hua <william.hua@canonical.com>  Tue, 18 Jun 2013 13:24:35 -0400

ubuntu-themes (13.04daily13.06.13-0ubuntu1) saucy; urgency=low

  [ Matthieu James ]
  * This update of the the mobile icon theme is focused on action icons:
    along with a few new icons, some tweaks to improve the general look
    and feel of the theme and make the icons compliant with the new
    behavior of the search fields. .

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 293

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Thu, 13 Jun 2013 00:03:01 +0000

ubuntu-themes (13.04daily13.06.12-0ubuntu1) saucy; urgency=low

  [ Xi Zhu ]