@@ -46,6 +46,27 @@
     border-image: url("assets/radiance-entry-toolbar-focused.png") 10 12 10 12 / 10px 12px 10px 12px stretch;
 }
 
+.primary-toolbar GtkComboBox.combobox-entry .button,
+.primary-toolbar GtkComboBox.combobox-entry .button:focus:insensitive,
+.menubar.toolbar GtkComboBox.combobox-entry .button,
+.menubar.toolbar GtkComboBox.combobox-entry .button:focus:insensitive,
+.header-bar GtkComboBox.combobox-entry .button,
+.header-bar GtkComboBox.combobox-entry .button:focus:insensitive {
+    border-image: url("assets/radiance-combobox-button-toolbar.png") 10 12 10 1 / 10px 12px 10px 1px stretch;
+}
+
+.primary-toolbar GtkComboBox.combobox-entry .button:focus,
+.menubar.toolbar GtkComboBox.combobox-entry .button:focus,
+.header-bar GtkComboBox.combobox-entry .button:focus {
+    border-image: url("assets/radiance-combobox-button-toolbar-focused.png") 10 12 10 1 / 10px 12px 10px 1px stretch;
+}
+
+.primary-toolbar GtkComboBox.combobox-entry .button:focus:active:focus,
+.menubar.toolbar GtkComboBox.combobox-entry .button:focus:active:focus,
+.header-bar GtkComboBox.combobox-entry .button:focus:active:focus {
+    border-image: url("assets/radiance-combobox-button-toolbar-pressed-focused.png") 10 12 10 1 / 10px 12px 10px 1px stretch;
+}
+
 .menubar.menuitem:hover,
 .menubar .menuitem:hover {
     border-image: url("assets/radiance-menubaritem.png") 8 10 1 10 / 8px 10px 1px 10px stretch;
