@@ -708,6 +708,9 @@ GtkDrawingArea {
  * entry *
  *********/
 GtkComboBox.combobox-entry .button,
+.primary-toolbar GtkComboBox.combobox-entry .button,
+.menubar.toolbar GtkComboBox.combobox-entry .button,
+.header-bar GtkComboBox.combobox-entry .button,
 .entry {
     -GtkWidget-focus-line-width: 0;
 
@@ -720,6 +723,9 @@ GtkComboBox.combobox-entry .button,
 }
 
 GtkComboBox.combobox-entry .button:backdrop,
+.primary-toolbar GtkComboBox.combobox-entry .button:backdrop,
+.menubar.toolbar GtkComboBox.combobox-entry .button:backdrop,
+.header-bar GtkComboBox.combobox-entry .button:backdrop,
 .entry:backdrop {
     background-image: -gtk-gradient (linear, left top, left bottom,
                                      from (mix (shade (@base_color, 0.96), @bg_color, 0.5)),
@@ -738,6 +744,9 @@ GtkComboBox.combobox-entry .button:backdrop,
 }
 
 GtkComboBox.combobox-entry .button:insensitive,
+.primary-toolbar GtkComboBox.combobox-entry .button:insensitive,
+.menubar.toolbar GtkComboBox.combobox-entry .button:insensitive,
+.header-bar GtkComboBox.combobox-entry .button:insensitive,
 .entry:insensitive {
     background-color: #f5f5f5;
     background-image: none;
@@ -746,6 +755,9 @@ GtkComboBox.combobox-entry .button:insensitive,
 }
 
 GtkComboBox.combobox-entry .button:insensitive:backdrop,
+.primary-toolbar GtkComboBox.combobox-entry .button:insensitive:backdrop,
+.menubar.toolbar GtkComboBox.combobox-entry .button:insensitive:backdrop,
+.header-bar GtkComboBox.combobox-entry .button:insensitive:backdrop,
 .entry:insensitive:backdrop {
     background-color: mix (#f5f5f5, @bg_color, 0.5);
 
